--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,9 +7,9 @@
 
 appearance:
   theme_day: minimal
-  theme_night:
-  font: native
-  font_size: L
+  theme_night: minimal
+  font: minimal
+  font_size: M
 
 # SEO
 
