--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,21 +4,21 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Tour
-    url: tour
+  - name: Home
+    url: home
     weight: 10
-  - name: News
-    url: post
+  - name: Team
+    url: team
     weight: 20
-  - name: People
-    url: people
+  - name: Research
+    url: research
     weight: 30
-  - name: Events
-    url: event
-    weight: 40
   - name: Publications
     url: publication
-    weight: 50
+    weight: 40
   - name: Contact
     url: contact
+    weight: 50
+  - name: Join Us
+    url: vacancies
     weight: 60
