--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -6,10 +6,10 @@ name = "my_theme"
   primary = "#1565c0"
 
   # Menu
-  menu_primary = "#BECEDF"
-  menu_text = "#34495e"
-  menu_text_active = "#2962ff"
-  menu_title = "#2b2b2b"
+  menu_primary = "#34495E"
+  menu_text = "#BECEDF"
+  menu_text_active = "#6C98C4"
+  menu_title = "#BECEDF"
 
   # Home sections
   home_section_odd = "rgb(190, 206, 223)"
