--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -3,7 +3,7 @@ name = "my_theme"
 
 [light]
   # Primary
-  primary = "#1565c0"
+  primary = "#34495E"
 
   # Menu
   menu_primary = "#34495E"
@@ -13,4 +13,4 @@ name = "my_theme"
 
   # Home sections
   home_section_odd = "rgb(190, 206, 223)"
-  home_section_even = "rgb(255, 255, 255)"
+  home_section_even = "rgb(247, 247, 247)"
