--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,11 +14,11 @@ appearance:
 
 marketing:
   seo:
-    site_type: Organization
+    site_type: ResearchOrganization
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'Homepage for the UCD Cancer Data Lab.'
+    twitter: 'colmr'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
