--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ static/.DS_Store
 .DS_Store
 content/.DS_Store
 content/authors/.DS_Store
+content/.DS_Store
+content/authors/.DS_Store
+.DS_Store
+content/.DS_Store
+content/authors/.DS_Store
